# reconverse

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  project-proposal.md  pyproject.toml  run.py
.mint/: ci.yml  feature-branch.yml  main.yml  update-leaves.yml
reconverse/: __init__.py  main.py  rdb.py  reconverse.py  routes.py
reconverse/cmd/: main.py
reconverse/graph/: knowledge_graph.py
reconverse/llm/: llm.py
reconverse/models/: __init__.py  base.py  conversation.py  rdb.py
reconverse/models/legacy/: base.py  conversation.py  entity.py  message.py
reconverse/server/: config.py  reconverse.py  routes.py
reconverse/services/itext2kg/: custom_schemas.py  ie_queries.py  interface.py
tests/: conftest.py
tests/graph/: test_knowledge_graph.py
tests/models/: test_base.py  test_entity.py
