[project]
name = "reconverse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.0.1",
    "ruff>=0.7.0",
#    "sqlalchemy-utils>=0.41.2",
#    "sqlalchemy>=2.0.36",
    "neo4j>=5.24.0",
    "scipy==1.14.1",
    "langchain==0.3.0",
    "langchain-community==0.3.0",
    "itext2kg==0.0.7",
    "psycopg==3.2.3"
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.2.2",
]
